10 December 2010: Matthijs
	- fix bug#306: applied documentation patch

12 October 2010: Wouter
	- Fix compilation on SunOS4.

24 September 2010: Matthijs
	- Bug #328: nsd-checkconf overrun

1 September 2010: Yuri
	- Support for huge TXT records.

23 Aug 2010: Wouter
	- fix bug#325: remove stale files from cvs from repo.

16 Aug 2010: Yuri
	- zonec, MAXRDATALEN check was off by one.

9 Aug 2010: Matthijs
	- nsdc return 1 outside function, should be exit 1
	- Bug #320: arc4random

2 Aug 2010: Matthijs
	- Bump to 3.2.7.

19 July 2010: Matthijs
	- fix big#314, NSEC next field now correctly escapes spaces.
	  Also fixes label overflow issue.
	- Put back HAVE_SSL.
	- Code reviews.
	- Add donor text.

6 July 2010: Wouter
	- Compiles on Minix 3.1.7; checks ss_family, suseconds_t, some
	  warning fixes.  Needs socketpair to work, e.g.
	  http://wiki.minix3.org/en/SummerOfCode2010/UnixDomainSockets.

2 July 2010: Wouter
	- Put back CHECK_SSL in configure (removed with disable-tsig).

17 June 2010: Matthijs
	- Expand command line option '-a' and config option 'ip-address:'
	  with port number.
	- Removed --disable-nsid, --disable-dnssec, --disable-tsig

14 April 2010: Matthijs
	- Bump to 3.2.6.

14 April 2010: Matthijs
	- uintptr_t fallback value to void*
	- Backwards compatibality for MAP_ANONYMOUS
	- Tag 3.2.5.

31 March 2010: Matthijs
	- Commit b64_pton optimalized compat code (Martin Svec).
	- Commit (experimental) mmap-alloc-namedb patch (Martin Svec).
	- Commit parse-token-leaks patch (Martin Svec).

27 March 2010: Wouter
	- fix bug#303: misspelled error message.

19 March 2010: Wouter
	- documented nsid: "hex string" setting in nsd.conf.sample.

24 February 2010: Matthijs
	- nsid: option
	- Enable NSID support by default
	- --with-chroot configure option
	- Less stupid chroot error handling

15 February 2010: Matthijs
	- Skip memory cleanup to speed up reload (Martin Svec)

1 February 2010: Wouter
	- compat code for memcmp unsigned comparsions.
